--- a/foundations/02-class-id-selectors/index.html
+++ b/foundations/02-class-id-selectors/index.html
@@ -11,7 +11,7 @@
     <p class="oddnumber">Number 1 - I'm a class!</p>
     <div id="first-id">Number 2 - I'm one ID.</div>
     <p class="oddnumber cooler">Number 3 - I'm a class, but cooler!</p>
-    <div id="second-id">Number 4 - I'm another ID.</div>
+    <div id="second-id" class="cooler">Number 4 - I'm another ID.</div>
     <p class="oddnumber">Number 5 - I'm a class!</p>
   </body>
 </html>
